made changes to about page, added layout, image and hover function and first text

--- a/src/app/pages/aboutpage/aboutpage.component.html
+++ b/src/app/pages/aboutpage/aboutpage.component.html
@@ -1,4 +1,11 @@
 <div class="background">
-    <p class="about">About</p>
-    <p class="about">This is a simple Angular application that demonstrates the use of Angular components, services, and routing.</p>
+    <div class="content-container">
+        <div class="image-container">
+            <img src="mietzey.PNG" alt="Foto von Mietzey" class="mietzey">
+        </div>
+        <div class="text-container">
+            <p class="about">Über mich:</p>
+            <p class="about">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+        </div>
+    </div>
 </div>
