--- a/src/app/pages/aboutpage/aboutpage.component.css
+++ b/src/app/pages/aboutpage/aboutpage.component.css
@@ -1,6 +1,6 @@
 .background{   
     background-color: #1B262C;
-    padding-top: 60px;
+    padding-top: 80px;
     min-height: 100vh;
     width: 100vw;
     margin: 0;
@@ -9,4 +9,46 @@
     position: absolute;
     left: 0;
     z-index: -1;
+}
+
+.content-container{
+    display: flex;
+    flex-direction: row;
+    padding: 0 40px;
+    gap: 30px;
+}
+
+.image-container{
+    flex-shrink: 0;
+}
+
+.mietzey{
+    max-width: 600px;
+    height: auto;
+    border:#1B262C solid;
+    border-radius: 10px;
+    transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
+    transform: perspective(1000px) rotateX(0) translateZ(0);
+}
+
+.mietzey:hover {
+    transform: perspective(1000px) translateY(-10px) translateZ(20px);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 10px 20px;
+}
+
+.text-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    max-width: 50vw;
+}
+
+.about{
+    font-size: 20px;
+    color: white;
+    margin: 10px 0;
+    white-space: pre-wrap;
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.5;
+    text-align: justify;
 }
