--- a/src/app/pages/aboutpage/aboutpage.component.css
+++ b/src/app/pages/aboutpage/aboutpage.component.css
@@ -1,8 +1,8 @@
 .background{   
     background-color: #1B262C;
     padding-top: 80px;
-    min-height: 100vh;
-    width: 100vw;
+    height: calc(100vh - 80px);
+    width: 100%;
     margin: 0;
     display: flex;
     flex-direction: column;
@@ -16,6 +16,8 @@
     flex-direction: row;
     padding: 0 40px;
     gap: 30px;
+    max-height: 100%;
+    box-sizing: border-box;
 }
 
 .image-container{
@@ -23,7 +25,7 @@
 }
 
 .mietzey{
-    max-width: 600px;
+    max-width: 100%;
     height: auto;
     border:#1B262C solid;
     border-radius: 10px;
@@ -44,7 +46,7 @@
 }
 
 .about{
-    font-size: 20px;
+    font-size: 24px;
     color: white;
     margin: 10px 0;
     white-space: pre-wrap;
