--- a/src/app/pages/aboutpage/aboutpage.component.html
+++ b/src/app/pages/aboutpage/aboutpage.component.html
@@ -5,7 +5,15 @@
         </div>
         <div class="text-container">
             <p class="about">Über mich:</p>
-            <p class="about">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+            <p class="about">Hey, mein Name ist Felix, ich bin 24 Jahre alt und studiere Informatik im Bachelor an der TH Nürnberg. 
+                Die Vertiefungsrichtungen meines Studiums sind Machine Learning und Cybersecurity. In meiner Freizeit kann man
+                mich bei Spielen meiner Herzensmannschaft der SPVGG Fürth im Stadion treffen oder unterwegs mit Freunden. Auf dieser Seite
+                versuche ich alle meine persönlichen Projekte sowie Erfahrungen im Bereich der Informatik festzuhalten. Unter Projekte findet
+                man alle meine Projekte inklusive einer kleinen Beschreibung und des Github-Repos. Weiter unten auf dieser Seite findet
+                man sowohl meinen Lebenslauf als auch von mir bekannte Sprachen sowie Tools. Viel Spaß beim Stöbern!<p>
         </div>
+    </div>
+    <div class="skills-container">
+        <app-skillbar></app-skillbar>
     </div>
 </div>
