made adjustments to skillbar and its position, TODO: Clean Up of CSS and HTML Code

--- a/src/app/pages/aboutpage/aboutpage.component.css
+++ b/src/app/pages/aboutpage/aboutpage.component.css
@@ -54,3 +54,11 @@
     line-height: 1.5;
     text-align: justify;
 }
+
+.skills-container{
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
