--- a/src/app/components/skillbar/skillbar.component.css
+++ b/src/app/components/skillbar/skillbar.component.css
@@ -1,35 +1,62 @@
 
+.skill-list {
+    display: flex;
+    flex-wrap: wrap; /* Ermöglicht das Umbrechen der Elemente */
+    gap: 20px; /* Abstand zwischen den Elementen */
+    margin-top: 20px; /* Abstand nach oben */
+    padding: 0 40px;
+    box-sizing: border-box;
+    width: 100%; /* Nimmt die gesamte Breite des Containers ein */
+}
+
 .skill-item {
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    width: 150px; /* Breite eines einzelnen Elements */
+    flex-direction: row; /* Ordnet das Logo und den Text vertikal an */
+    align-items: center; /* Zentriert die Inhalte horizontal */
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 2px solid #ccc;
     border-radius: 8px;
-    background-color: #f9f9f9;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s ease-in-out;
+    gap: 50px;
+    height: auto;
+}
+
+.skill-text{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
 }
 
 .skill-item:hover {
     transform: scale(1.05); /* Vergrößert das Element leicht beim Hover */
 }
 
+.skill-logo:hover {
+    transform: scale(1.25); /* Vergrößert das Element leicht beim Hover */
+}
+
 .skill-logo {
-    width: 50px;
-    height: 50px;
-    margin-bottom: 10px;
+    width: 80px; /* Einheitliche Breite für alle Icons */
+    height: 80px; /* Einheitliche Höhe für alle Icons */
+    margin-bottom: 10px; /* Passt das Bild an die Größe an, ohne es zu verzerren */
+    object-fit: contain;
+    transition: transform 0.2s ease-in-out;
+    align-items: center; 
 }
 
 .skill-name {
-    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 24px;
+    color: #ccc;
     font-weight: bold;
     text-align: center;
 }
 
 .skill-project {
-    font-size: 14px;
-    color: #666;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 24px;
+    color: #ccc;
     text-align: center;
 }
