--- a/src/app/components/skillbar/skillbar.component.css
+++ b/src/app/components/skillbar/skillbar.component.css
@@ -3,8 +3,7 @@
     display: flex;
     flex-wrap: wrap; /* Ermöglicht das Umbrechen der Elemente */
     gap: 20px; /* Abstand zwischen den Elementen */
-    margin-top: 20px; /* Abstand nach oben */
-    padding: 0 40px;
+    margin-top: 40px; /* Abstand nach oben */
     box-sizing: border-box;
     width: 100%; /* Nimmt die gesamte Breite des Containers ein */
 }
@@ -13,8 +12,10 @@
     display: flex;
     flex-direction: row; /* Ordnet das Logo und den Text vertikal an */
     align-items: center; /* Zentriert die Inhalte horizontal */
-    padding: 10px;
-    border: 2px solid #ccc;
+    padding-top: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border: 2px solid #3282B8;
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s ease-in-out;
@@ -40,10 +41,10 @@
 .skill-logo {
     width: 80px; /* Einheitliche Breite für alle Icons */
     height: 80px; /* Einheitliche Höhe für alle Icons */
-    margin-bottom: 10px; /* Passt das Bild an die Größe an, ohne es zu verzerren */
+    margin-bottom: 20px; /* Passt das Bild an die Größe an, ohne es zu verzerren */
     object-fit: contain;
     transition: transform 0.2s ease-in-out;
-    align-items: center; 
+    align-items: center;
 }
 
 .skill-name {
@@ -52,6 +53,8 @@
     color: #ccc;
     font-weight: bold;
     text-align: center;
+    margin-top: 10px;
+    text-wrap: nowrap;
 }
 
 .skill-project {
